--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 __pycache__
 
 #Config
-static/ssl/**
-config/**
+edofparser/static/ssl/**
+edofparser/config/**
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
