[BW][EDOF] Fix git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@ __pycache__
 
 #Config
 edofparser/static/ssl/**
-edofparser/config/**
+edofparser/static/ssl/
+edofparser/config/config.ini
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
